--- a/views/pages/custom.ejs
+++ b/views/pages/custom.ejs
@@ -8,7 +8,7 @@
 <body>
   <% include ../partials/nav.ejs %>
     <h1>Custom Page</h1>
-
+    <button id='click-btn'>Click Here to Add Div</button>
 
     <div id="main">
     </div>
