--- a/views/pages/category.ejs
+++ b/views/pages/category.ejs
@@ -8,6 +8,10 @@
 <body>
   <% include ../partials/nav.ejs %>
     <h1>Category Page</h1>
+    <button id='click-btn'>Click Here to Add Div</button>
+
+    <div id="insert-dy">
+    </div>
     <div id="main">
       <div class="sidebar col-md-4">
         <h2>sidebar</h2>
