added git ignore

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,17 +1,21 @@
-@import "variables";
-@import "mixins";
-
-@import "normalize";
-@import "typography";
-@import "utility";
-
-@import "animation";
-@import "base";
+// @import "variables";
+// @import "mixins";
+// @import "normalize";
+// @import "typography";
+// @import "utility";
+// @import "animation";
+// @import "base";
+// @import "./layout/index";
+// @import "./pages/index";
+@import "application";
 
 $font-stack: Arial, sans-serif;
 $primary-color: #333;
 $testing: 2rem;
 
+// .main-footer {
+//   color: yellow;
+// }
 nav {
   ul {
     margin: 0;
