--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
 
 <body>
   <% include ../partials/nav.ejs %>
-    <h1>Home Page</h1>
+    <h1 class='main-header'>Home Page</h1>
 
 
     <div id="main">
@@ -31,28 +31,28 @@
     <div id="footer">
       <nav>
         <ul>
-          <li>
+          <li class='nav-item'>
             <a href="">menu 1</a>
           </li>
         </ul>
       </nav>
       <nav>
         <ul>
-          <li>
+          <li class='nav-item'>
             <a href="">menu 2</a>
           </li>
         </ul>
       </nav>
       <nav>
         <ul>
-          <li>
+          <li class='nav-item'>
             <a href="">menu 3</a>
           </li>
         </ul>
       </nav>
       <nav>
         <ul>
-          <li>
+          <li class='nav-item'>
             <a href="">menu 4</a>
           </li>
         </ul>
@@ -60,5 +60,9 @@
     </div>
     <script src="//localhost:35729/livereload.js"></script>
 </body>
-
+<footer>
+  <div class='main-footer'>
+    footer
+  </div>
+</footer>
 </html>
