--- a/sass/_utility.scss
+++ b/sass/_utility.scss
@@ -1,5 +1,3 @@
-@import "mixins";
-
 .wrapper {
   /*
     This class will usually be used when we have escaped the site
@@ -14,7 +12,7 @@
     Used to horizontally center content within a wrapper taking
     our site's max width into account.
   */
-  // @include margin(null auto);
+  // margin: (null auto);
   max-width: $width-max;
 }
 
