--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,7 +13,7 @@
     <div id="main">
       <div class="hero-banner"></div>
       <div class="banner-box">
-        <div class="col-md-3"></div>
+        <div id='box-1' class="col-md-3"></div>
         <div class="col-md-3"></div>
         <div class="col-md-3"></div>
         <div class="col-md-3"></div>
