--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,18 +13,18 @@
     <div id="main">
       <div class="hero-banner"></div>
       <div class="banner-box">
-        <div id='box-1' class="col-md-3"></div>
+        <div class="col-md-3"></div>
         <div class="col-md-3"></div>
         <div class="col-md-3"></div>
         <div class="col-md-3"></div>
       </div>
       <div class="box-section">
-        <div class="col-md-6 col-xs-12">box 1</div>
-        <div class="col-md-6 col-xs-12">box 3</div>
+        <div id='box1' class="col-md-6 col-xs-12">box 1</div>
+        <div id='box2' class="col-md-6 col-xs-12">box 2</div>
       </div>
       <div class="box-section">
-        <div class="col-md-6 col-xs-12">box 3</div>
-        <div class="col-md-6 col-xs-12">box 4</div>
+        <div id='box3' class="col-md-6 col-xs-12">box 3</div>
+        <div id='box4' class="col-md-6 col-xs-12">box 4</div>
       </div>
 
     </div>
@@ -37,6 +37,11 @@
         </ul>
       </nav>
       <nav>
+        <style>
+          .nav-item {
+            font-size: 24px;
+          }
+          </style>
         <ul>
           <li class='nav-item'>
             <a href="">menu 2</a>
@@ -58,7 +63,7 @@
         </ul>
       </nav>
     </div>
-    <script src="//localhost:35729/livereload.js"></script>
+    <!-- <script src="//localhost:35729/livereload.js"></script> -->
 </body>
 <footer>
   <div class='main-footer'>
