--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -10,18 +10,22 @@
     <h1>Product Page</h1>
     <div id="main">
       <div class="col-md-8 blue main-product">
-       <div class="main-image"></div>
-       <div class="title">
-         <h3>Product title</h3>
-       </div>
+        <div class="main-image"></div>
+        <div class="title">
+          <h3>Product title</h3>
+          <div class="box-section">
+            <div id='box1' class="col-md-6 col-xs-12">box 1</div>
+            <div id='box2' class="col-md-6 col-xs-12">box 2</div>
+          </div>
+        </div>
       </div>
       <div class="col-md-4 thumbnails">
-      <img src="https://placeholdit.co//i/555x150" alt="">
-      <img src="https://placeholdit.co//i/555x150" alt="">
-      <img src="https://placeholdit.co//i/555x150" alt="">
-      <img src="https://placeholdit.co//i/555x150" alt=""></div>
+        <img src="https://placeholdit.co//i/555x150" alt="">
+        <img src="https://placeholdit.co//i/555x150" alt="">
+        <img src="https://placeholdit.co//i/555x150" alt="">
+        <img src="https://placeholdit.co//i/555x150" alt="">
+      </div>
     </div>
 </body>
 
 </html>
-
