--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,7 @@
   <% include ../partials/nav.ejs %>
     <h1 class='main-header'>Home Page</h1>
 
+    <div class='recommend-here'></div>
 
     <div id="main">
       <div class="hero-banner"></div>
