Added min height to the rec and border to view it easier

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,9 +15,14 @@
 .box {
   @include border-radius(10px);
 }
-.box-section>div {
-  background-color: 'lightblue';
+.box-section > div {
+  background-color: "lightblue";
 }
 #box {
-  background-color: 'blue';
+  background-color: "blue";
+}
+
+.recommend-here {
+  min-height: 125px;
+  border: 1px solid black;
 }
