--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@
 @import "typography";
 @import "utility";
 // @import "animation";
-//@import "base";
+@import "base";
 // @import "./layout/index";
 // @import "./pages/index";
 //@import "application";
