Added footer to bottom of page

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,9 +15,11 @@
 .box {
   @include border-radius(10px);
 }
-.box-section > div {
+
+.box-section>div {
   background-color: "lightblue";
 }
+
 #box {
   background-color: "blue";
 }
@@ -25,4 +27,45 @@
 .recommend-here {
   min-height: 125px;
   border: 1px solid black;
+}
+
+.products-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10rem;
+}
+
+.item-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin: auto;
+  p {
+    margin: auto;
+    max-width: 220px;
+  }
+}
+
+.product-image {
+  max-height: 250px;
+  max-width: 220px;
+  margin: auto;
+}
+
+.tj-btn {
+  background-color: red;
+  color: #fff;
+  padding: 16px 0; //max-width: 220px;
+}
+
+@media only screen and (max-width: 420px) {
+  .products-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media only screen and (max-width: 667px) {
+  .products-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
