--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -61,6 +61,8 @@ $font-size-contentful-mobile-small: $font-size-base;
 $font-size-contentful-mobile-medium: 24px;
 $font-size-contentful-desktop-small: 20px;
 $font-size-contentful-desktop-medium: 46px;
+$font-family-primary: Helvetica,
+sans-serif;
 /* Special Characters */
 
 $character-line-feed: "\A";
@@ -106,9 +108,9 @@ $z-index-institial: 8000;
 $z-index-tooltips: 9000;
 // Animations
 // - - - - - - - - - - - - - - - - - - - - - - - - -
-$duration-default : 0.3s;
-$timing-default : ease-in-out;
-$transition-default : $duration-default $timing-default;
+$duration-default: 0.3s;
+$timing-default: ease-in-out;
+$transition-default: $duration-default $timing-default;
 // Product / show
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 $width-option-tile: 40px;
