--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -90,11 +90,8 @@
       </nav>
     </div>
     <!-- <script src="//localhost:35729/livereload.js"></script> -->
+    <% include ../partials/footer.ejs %>
 </body>
-<footer>
-  <div class='main-footer'>
-    footer
-  </div>
-</footer>
+
 
 </html>
