Footer correctly rendering across the board

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -8,6 +8,10 @@
 <body>
   <% include ../partials/nav.ejs %>
     <h1>Cart Page</h1>
+    <div class="main">
+
+    </div>
+    <% include ../partials/footer.ejs %>
 </body>
 
 </html>
