--- a/views/pages/product.ejs
+++ b/views/pages/product.ejs
@@ -26,6 +26,10 @@
         <img src="https://placeholdit.co//i/555x150" alt="">
       </div>
     </div>
+    <div class='main container'>
+
+    </div>
+    <% include ../partials/footer.ejs %>
 </body>
 
 </html>
