--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
     
     <ul class="nav navbar-nav">
       <li class="active">
-        <a href="/homepage">
+        <a href="/">
           <span class="glyphicon glyphicon-home"></span> Home</a>
       </li>
 
